<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/scores_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scoreboard_bakcgroung"
    tools:context=".ScoreboardFragment">

    <LinearLayout
        android:id="@+id/score_table_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/difficulty"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/score_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/score_table_headers"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1" />

<!--    <FrameLayout
        android:id="@+id/fragment_containerscoretable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp" />-->
</RelativeLayout>